--- a/_includes/work.html
+++ b/_includes/work.html
@@ -1,6 +1,6 @@
 <section class="alt-section section-work">
   
-  <h3 id="work">Work</h3>
+  <h3 id="work">Products</h3>
   {% for project in site.data.settings.projects %}
     <input type="radio" name="trigger" class="trigger" id="{{ project.folder }}" />
   {% endfor %}
